# Server/src/router/questions.routes.js
@@ -1,0 +1,7 @@
+const {Router} = require("express");
+const questionRouter = Router();
+const controller = require("../controller/question.controller");
+
+questionRouter.post("/question", controller.askQuestionController);
+
+module.exports = questionRouter;
